# stateswitch

./: .gitignore  .worktreeinclude  CLAUDE.md  main.py  pyproject.toml
srcs/behavior/: ahc_rt.py  gpt2.py  plot_silence_histograms.py  svf_ahc_behavior.py  svf_exploratory.py  svf_gpt2_claude.py  svf_gpt2_features.py  svf_irt_by_subject.py  svf_irt_multisession.py  svf_ratings.ipynb
srcs/configs/: config.py  schaefer_rois.py
srcs/filmfest/: filmfest_boundary_strength_ratings.py  plot_boundary_agreement.py  plot_segb_boundary_alignment.py
srcs/fmrianalysis/: ahc_across_vs_within_glm.py  ahc_boundary.py  ahc_boundary_ispc.py  ahc_boundary_wspc.py  ahc_category_boundary.py  ahc_switch_contrast.py  batch_localizers_contrast.py  boundary_locked_ttc.py  boundary_locked_ttc_cross_task.py  combined_boundary_figure.py  combined_boundary_ispc_figure.py  compare_volume_vs_surface.py  cross_task_ispc_anova.py  cross_task_ispc_cell_stats.py  cross_task_ispc_matrix.py  cross_task_wspc.py  extract_task_parcels.py  fast.ipynb  filmfest_audio_alignment_check.py  filmfest_between_movie_boundary.py  filmfest_boundary_ispc.py  filmfest_boundary_response.py  filmfest_boundary_wspc.py  filmfest_macro_micro_pattern_similarity.py  filmfest_parcel_pattern_isc.py  filmfest_segment_boundary.py  filmfest_segment_boundary_vertex.py  filmfest_vertex_isc.py  group_mean_ttc.py  localizer_glm_batch.py  localizer_glm_parcel.py  localizer_glm_surface.py  localizer_roi_glm_contrasts.py  localizers_contrast.py  localizers_contrast_schaefer.py  macro_micro_boundary_figure.py  multitask_boundary_parcel.py  (+58 more)
(+26 files in other folders)
